--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,12 @@
         <tfoot>
         </tfoot>
     </table>
-    <script src="js/index.js"></script>
+    <script src="js/app/models/Negociacao.js"></script>
+    <script>
+        let n1 = new Negociacao(new Date(), 5 , 700);   // new Date() --> Inicia com data atual
+        console.log(n1);
+        console.log(`O volume é igual = ${n1.volume}`);
+    </script>
     
 </body>
 </html>
