--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,8 @@
     </table>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
+    <script src="js/helpers/DateHelper.js"></script>
+    <script src="Js/app/models/ListaNegociacoes.js"></script>
     <script>
         let negociacaoController = new NegociacaoController();
 
